deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtfm
spec:
  selector: {app: rtfm}
  ports:
    - {name: http, port: 80, targetPort: http}
